<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shift Indicator</string>
    <string name="indicator">Shift Indicator</string>
    <string name="menu_settings">Settings</string>
	<string name="vehicle_speed">Speed:</string>
	<string name="engine_speed">RPM:</string>
	<string name="pedal_position">Pedal %:</string>
	<string name="button_text">Send Signal</string>
	
	<string name="pref_operation_title">Shift Indicator Options</string>
	
	<string name="pref_calculation_title">Efficiency: Shift Point Algorithm</string>
	<string name="pref_calculation_summary">Calculate or wait for CAN signal</string>
	<string name="pref_calculation_off">CAN Signal</string>
	<string name="pref_calculation_on">Calculate</string>
	
	<string name="pref_shift_point_summary">Input RPM value</string>
	<string name="pref_shift_point_title">Performance: Shift Point</string>
	<string name="shift_point_dialog">Shift Point: Enter RPM</string>
	
	<string name="pref_haptic_title">Vibration</string>
	<string name="pref_audio_title">Audible Tone</string>
	<string name="pref_visual_title">Visual Signal</string>
	<string name="power_title">Driving Coach</string>
	<string name="settingsTitle">Settings</string>
	<string name="exitTitle">Close</string>
	
	<string name="pref_mode_title">Select Coaching Mode</string>
	<string name="pref_mode_off">Performance</string>
	<string name="pref_mode_on">Fuel Efficiency</string>
	<string name="pref_mode_summary">Efficiency/Performance</string>
	
	<string name="vehicle_prompt">Choose a Vehicle</string>

</resources>