<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	
	<PreferenceCategory
	    android:title="@string/pref_operation_title">
	    
	    <SwitchPreference
	        android:key="pref_operation_mode"
	        android:title="@string/pref_mode_title" 
	        android:summary="@string/pref_mode_summary"
	        android:switchTextOn="@string/pref_mode_off"
	        android:switchTextOff="@string/pref_mode_on"
	        android:defaultValue="true"/>
	    <SwitchPreference
	        android:key="pref_calculation_mode"
	        android:title="@string/pref_calculation_title" 
	        android:summary="@string/pref_calculation_summary"
	        android:switchTextOn="@string/pref_calculation_on"
	        android:switchTextOff="@string/pref_calculation_off"
	        android:defaultValue="true"/>
	    <EditTextPreference
	    	android:inputType="number"
	    	android:key="pref_shift_point"
	    	android:summary="@string/pref_shift_point_summary"
	    	android:title="@string/pref_shift_point_title"
	    	android:dialogTitle="@string/shift_point_dialog"
	    	android:defaultValue="5000"/>
	    <CheckBoxPreference 
	        android:key="pref_haptic_feedback"
	        android:title="@string/pref_haptic_title"
	        android:defaultValue="TRUE"/>
	    <CheckBoxPreference 
	        android:key="pref_audio_feedback"
	        android:title="@string/pref_audio_title"
	        android:defaultValue="TRUE"/>
	    <CheckBoxPreference 
	        android:key="pref_visual_feedback"
	        android:title="@string/pref_visual_title"
	        android:defaultValue="TRUE"/>
	</PreferenceCategory>
	
</PreferenceScreen>